--- a/index.html
+++ b/index.html
@@ -259,7 +259,16 @@
 <div id="42c"> Bananas </div>
 <div id="42d"> Corn</div>
 
+<div id="fin">After collecting responses, some of your answers will be checked.  If you do well on all of the checked answers, you will receive a $0.20 bonus.
+</div>
 
+<div id="pos">Thank you for contributing to this task!  Your answers to the following questions will provide meaningful insights to academic researchers.  We appreciate that you are taking the time to answer carefully. </div>
+
+<div id="neu">This task requires careful attention and some of your answers will be checked.  If you aren’t able to give this task your complete attention, please return the HIT.
+</div>
+
+<div id="imc">Individual preferences, along with situational variables can greatly impact the decision process. In order to facilitate our research, we are interested in whether you take the time to read directions. In order to demonstrate that you have read the instructions, please ignore the buttons below and click on the first word of this paragraph.  
+</div>
 
 </body>
 </html>
