--- a/conditions.html
+++ b/conditions.html
@@ -1,13 +1,16 @@
 <div id="imc">
 <p>Individual preferences, along with situational variables can greatly impact the decision process. In order to facilitate our research, we are interested in whether you take the time to read directions. In order to demonstrate that you have read the instructions, please ignore the question below and select all of the options before selecting next.</p>
-<input id="book1" type="checkbox" />Non-fiction <br/>
-<input id="book2" type="checkbox" />Literary Fiction <br/>
-<input id="book3" type="checkbox" />Biographies <br/>
-<input id="book4" type="checkbox" />Mystery <br/>
-<input id="book5" type="checkbox" />Sci-fi/Fantasy <br/>
-<input id="book6" type="checkbox" />Historical Fiction <br/>
-<input id="book7" type="checkbox" />Horror <br/>
-<input id="book8" type="checkbox" />None of the above <br/>
+<br>
+<p>Which of these genres do you enjoy reading in your spare time? Select all that apply.</p>
+<br>
+<input name="book" id="book1" type="checkbox" />Non-fiction <br/>
+<input name="book" id="book2" type="checkbox" />Literary Fiction <br/>
+<input name="book" id="book3" type="checkbox" />Biographies <br/>
+<input name="book" id="book4" type="checkbox" />Mystery <br/>
+<input name="book" id="book5" type="checkbox" />Sci-fi/Fantasy <br/>
+<input name="book" id="book6" type="checkbox" />Historical Fiction <br/>
+<input name="book" id="book7" type="checkbox" />Horror <br/>
+<input name="book" id="book8" type="checkbox" />None of the above <br/>
 <br/>
 </div>
 
