fixed typo in question

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="2c">Neutral</div>
 <div id="2d">Agree</div>
 <div id="2e">Strongly Agree</div>
-<div id="qu3">I enjoy having a wide cmycle of acquuaintances</div>
+<div id="qu3">I enjoy having a wide circle of acquuaintances</div>
 <div id="3a">Strongly Disagree</div>
 <div id="3b">Disagree</div>
 <div id="3c">Neutral</div>
@@ -28,7 +28,7 @@
 <div id="4c">Neutral</div>
 <div id="4d">Agree</div>
 <div id="4e">Strongly Agree</div>
-<div id="qu5">I am usually the fmyst to react to a sudden event: the telephone ringing or unexpected quuestion</div>
+<div id="qu5">I am usually the first to react to a sudden event: the telephone ringing or unexpected question</div>
 <div id="5a">Strongly Disagree</div>
 <div id="5b">Disagree</div>
 <div id="5c">Neutral</div>
