Fixing spelling/grammar

--- a/conditions.html
+++ b/conditions.html
@@ -23,5 +23,5 @@
 </div>
 
 <div id="financial">
-<p>We will ask questions about yourself as well as a few factual questions.  After collecting responses, answers to factual questions will be checked. If you do well on all of the checked answers, you will receive <b>a $0.20 bonus</b>.</p>
+<p>In this HIT, we will ask you questions about yourself as well as a few factual questions.  After collecting responses, answers to factual questions will be checked. If you do well on all of the checked answers, you will receive <b>a $0.20 bonus</b>.</p>
 </div>
