--- a/index.html
+++ b/index.html
@@ -551,13 +551,13 @@
 <div id="t3c"><b>Neutral</b></div>
 <div id="t3d"><b>Agree</b></div>
 <div id="t3e"><b>Strongly Agree</b></div>
-<div id="tqu4"><b>I am fluent in the programing language D-flat.</b></div>
+<div id="tqu4"><b>I am fluent in the programming language D-flat.</b></div>
 <div id="t4a"><b>Strongly Disagree</b></div>
 <div id="t4b"><b>Disagree</b></div>
 <div id="t4c"><b>Neutral</b></div>
 <div id="t4d"><b>Agree</b></div>
 <div id="t4e"><b>Strongly Agree</b></div>
-<div id="tqu5"><b>I am a person who has an amazon mechanical turk account.</b></div>
+<div id="tqu5"><b>I am a person who has an Amazon Mechanical Turk account.</b></div>
 <div id="t5a"><b>Strongly Disagree</b></div>
 <div id="t5b"><b>Disagree</b></div>
 <div id="t5c"><b>Neutral</b></div>
@@ -569,7 +569,7 @@
 <div id="t6c"><b>Neutral</b></div>
 <div id="t6d"><b>Agree</b></div>
 <div id="t6e"><b>Strongly Agree</b></div>
-<div id="tqu7"><b>I take my time reading surveys on mechanical turk, so I will select 'no' to show I have read this question.</b></div>
+<div id="tqu7"><b>I take my time reading surveys on Mechanical Turk, so I will select 'no' to show I have read this question.</b></div>
 <div id="t7a"><b>Strongly Disagree</b></div>
 <div id="t7b"><b>Disagree</b></div>
 <div id="t7c"><b>Neutral</b></div>
