--- a/conditions.html
+++ b/conditions.html
@@ -1,5 +1,5 @@
 <div id="imc">
-<p>Individual preferences, along with situational variables can greatly impact the decision process. In order to facilitate our research, we are interested in whether you take the time to read directions. In order to demonstrate that you have read the instructions, please ignore the question below and select all of the options before selecting next.</p>
+<p>Individual preferences, along with situational variables can greatly impact the decision process. In order to facilitate our research, we are interested in whether you take the time to read directions. In order to demonstrate that you have read the instructions, please ignore the question below and select all of the options before selecting continue.</p>
 <br>
 <p>Which of these genres do you enjoy reading in your spare time? Select all that apply.</p>
 <br>
