--- a/survey.html
+++ b/survey.html
@@ -215,13 +215,14 @@
 <b>Contact information:</b> If you have questions about this research, you may contact Professor Katharina Reinecke, Paul G. Allen Center for Computer Science &amp; Engineering, Box 352350, Seattle, WA 98195, reinecke@cs.washington.edu. If you have questions about your rights as a research participant, or wish to obtain information, ask questions or discuss any concerns about this study with someone other than the researcher(s), please contact the University of Washington Human Subjects Division at 206-543-0098 (for international calls include the US Calling Code: +1-206-543-0098).</div>
 &nbsp;
 
-<div class="warning">Please only complete this HIT once. You will not be paid for retakes.</div>
+<div class="warning">Please only complete this HIT once. You will not be paid for retakes. Please do not refresh the webpage during this survey.</div>
 &nbsp;
 
 <div class="confirm">&nbsp;</div>
+<div class="checkbox" hidden=""><label><input checked="checked" id="time1" name="time1" type="checkbox" value="1" /></label></div>
 <input id="myCheck" type="checkbox" /> By ticking this box, you are agreeing to be in the study. Be sure that questions you have about the study have been answered and that you understand what you are being asked to do. You may contact the researcher if you think of a question later. You are free to leave the experiment at any time, and refusing to be in the experiment or stopping participation will involve no penalty or loss of benefits to which you are otherwise entitled.<br />
 <br />
-<input id="acceptThis" onclick="if(document.getElementById('myCheck').checked &amp;&amp; acceptHIT){next();}else{alert('Please confirm you have accepted the HIT and agree to the disclaimer.')}" type="button" value="Continue" /></div>
+<input id="acceptThis" onclick="if(document.getElementById('myCheck').checked &amp;&amp; acceptHIT){next(); document.getElementById('time1').setAttribute('value', new Date().getTime().toString());}else{alert('Please confirm you have accepted the HIT and agree to the disclaimer.')}" type="button" value="Continue" /></div>
 </div>
 
 <div class="page" id="2" style="display: none;">
@@ -231,6 +232,7 @@
 <div id="conditions">&nbsp;</div>
 
 <div class="checkbox" hidden=""><label><input checked="checked" id="grouptype" name="grouptype" type="checkbox" value="1" /></label></div>
+<div class="checkbox" hidden=""><label><input checked="checked" id="time2" name="time2" type="checkbox" value="1" /></label></div>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script><script>
                 var prefix = "";
                 var randV = parseInt(Math.random() * 4)
@@ -247,7 +249,7 @@
                 var loc1 = "https://epeach.github.io/textFilesForAttention/conditions.html";
                 $("#conditions").load(loc1.concat(prefix));
                 document.getElementById("grouptype").setAttribute("value", parseInt(randV).toString());
-            </script><u><u><input onclick="if(randV == 0 &amp;&amp; valAllButton(document.getElementsByName('book')) == null){alert('Please carefully read the instructions.');} else {next();$(window).scrollTop(0);}" type="button" value="Continue" /></u></u></div>
+            </script><u><u><input onclick="if(randV == 0 &amp;&amp; valAllButton(document.getElementsByName('book')) == null){alert('Please carefully read the instructions.');} else {next();$(window).scrollTop(0);document.getElementById('time2').setAttribute('value', new Date().getTime().toString());}" type="button" value="Continue" /></u></u></div>
 </div>
 
 <div class="page" id="3" style="display: none;">
@@ -403,7 +405,8 @@
             }
         </script><br />
 <br />
-<u><u><input onclick="if(valButton(document.getElementsByName('q1')) == null || valButton(document.getElementsByName('q2')) == null ||valButton(document.getElementsByName('q3')) == null ||valButton(document.getElementsByName('q4')) == null ||valButton(document.getElementsByName('q5')) == null ||valButton(document.getElementsByName('q6')) == null || valButton(document.getElementsByName('q7')) == null ||valButton(document.getElementsByName('q8')) == null || valButton(document.getElementsByName('q9')) == null || valButton(document.getElementsByName('q10')) == null){alert('Please make a selection.');}else{next();$(window).scrollTop(0);}" type="button" value="Continue" /></u></u><br />
+<div class="checkbox" hidden=""><label><input checked="checked" id="time3" name="time3" type="checkbox" value="1" /></label></div>
+<u><u><input onclick="if(valButton(document.getElementsByName('q1')) == null || valButton(document.getElementsByName('q2')) == null ||valButton(document.getElementsByName('q3')) == null ||valButton(document.getElementsByName('q4')) == null ||valButton(document.getElementsByName('q5')) == null ||valButton(document.getElementsByName('q6')) == null || valButton(document.getElementsByName('q7')) == null ||valButton(document.getElementsByName('q8')) == null || valButton(document.getElementsByName('q9')) == null || valButton(document.getElementsByName('q10')) == null){alert('Please make a selection.');}else{next();$(window).scrollTop(0);document.getElementById('time3').setAttribute('value', new Date().getTime().toString());}" type="button" value="Continue" /></u></u><br />
 &nbsp;
 <center><u><u>Page 1 / 4</u></u></center>
 </center>
@@ -553,7 +556,8 @@
             }
         </script><br />
 <br />
-<u><u><input onclick="if(valButton(document.getElementsByName('q11')) == null || valButton(document.getElementsByName('q12')) == null ||valButton(document.getElementsByName('q13')) == null ||valButton(document.getElementsByName('q14')) == null ||valButton(document.getElementsByName('q15')) == null ||valButton(document.getElementsByName('q16')) == null || valButton(document.getElementsByName('q17')) == null ||valButton(document.getElementsByName('q18')) == null || valButton(document.getElementsByName('q19')) == null || valButton(document.getElementsByName('q20')) == null){alert('Please make a selection.');}else{next();$(window).scrollTop(0);}" type="button" value="Continue" /></u></u><br />
+<div class="checkbox" hidden=""><label><input checked="checked" id="time4" name="time4" type="checkbox" value="1" /></label></div>
+<u><u><input onclick="if(valButton(document.getElementsByName('q11')) == null || valButton(document.getElementsByName('q12')) == null ||valButton(document.getElementsByName('q13')) == null ||valButton(document.getElementsByName('q14')) == null ||valButton(document.getElementsByName('q15')) == null ||valButton(document.getElementsByName('q16')) == null || valButton(document.getElementsByName('q17')) == null ||valButton(document.getElementsByName('q18')) == null || valButton(document.getElementsByName('q19')) == null || valButton(document.getElementsByName('q20')) == null){alert('Please make a selection.');}else{next();$(window).scrollTop(0);document.getElementById('time4').setAttribute('value', new Date().getTime().toString());}" type="button" value="Continue" /></u></u><br />
 &nbsp;
 <center><u><u>Page 2 / 4</u></u></center>
 </center>
@@ -703,7 +707,8 @@
             }
         </script><br />
 <br />
-<u><u><input onclick="if(valButton(document.getElementsByName('q21')) == null || valButton(document.getElementsByName('q22')) == null ||valButton(document.getElementsByName('q23')) == null ||valButton(document.getElementsByName('q24')) == null ||valButton(document.getElementsByName('q25')) == null ||valButton(document.getElementsByName('q26')) == null || valButton(document.getElementsByName('q27')) == null ||valButton(document.getElementsByName('q28')) == null || valButton(document.getElementsByName('q29')) == null || valButton(document.getElementsByName('q30')) == null){alert('Please make a selection.');}else{next();$(window).scrollTop(0);}" type="button" value="Continue" /></u></u><br />
+<div class="checkbox" hidden=""><label><input checked="checked" id="time5" name="time5" type="checkbox" value="1" /></label></div>
+<u><u><input onclick="if(valButton(document.getElementsByName('q21')) == null || valButton(document.getElementsByName('q22')) == null ||valButton(document.getElementsByName('q23')) == null ||valButton(document.getElementsByName('q24')) == null ||valButton(document.getElementsByName('q25')) == null ||valButton(document.getElementsByName('q26')) == null || valButton(document.getElementsByName('q27')) == null ||valButton(document.getElementsByName('q28')) == null || valButton(document.getElementsByName('q29')) == null || valButton(document.getElementsByName('q30')) == null){alert('Please make a selection.');}else{next();$(window).scrollTop(0);document.getElementById('time5').setAttribute('value', new Date().getTime().toString());}" type="button" value="Continue" /></u></u><br />
 <br />
 <br />
 &nbsp;
@@ -790,7 +795,8 @@
             }
         </script><br />
 <br />
-<u><u><input onclick="if(valButton(document.getElementsByName('q31')) == null || valButton(document.getElementsByName('q32')) == null ||valButton(document.getElementsByName('q33')) == null ||valButton(document.getElementsByName('q34')) == null ||valButton(document.getElementsByName('q35')) == null){alert('Please make a selection.');}else{next();$(window).scrollTop(0);}" type="button" value="Continue" /></u></u><br />
+<div class="checkbox" hidden=""><label><input checked="checked" id="time6" name="time6" type="checkbox" value="1" /></label></div>
+<u><u><input onclick="if(valButton(document.getElementsByName('q31')) == null || valButton(document.getElementsByName('q32')) == null ||valButton(document.getElementsByName('q33')) == null ||valButton(document.getElementsByName('q34')) == null ||valButton(document.getElementsByName('q35')) == null){alert('Please make a selection.');}else{next();$(window).scrollTop(0);document.getElementById('time6').setAttribute('value', new Date().getTime().toString());}" type="button" value="Continue" /></u></u><br />
 &nbsp;
 <center><u><u>Page 4 / 4</u></u></center>
 </center>
@@ -810,7 +816,8 @@
 <p>Do you consider yourself fluent in English?</p>
 <input name="english" type="radio" value="yes" /> Yes <input name="english" type="radio" value="no" /> No<br />
 <br />
-<u><u><input onclick="if(valButton(document.getElementsByName('english')) == null || valButton(document.getElementsByName('gender')) == null || document.getElementById('ageIn').value.length &lt; 1){alert('Please make a selection.');}else{next();}" type="button" value="Continue" /></u></u></div>
+<div class="checkbox" hidden=""><label><input checked="checked" id="time7" name="time7" type="checkbox" value="1" /></label></div>
+<u><u><input onclick="if(valButton(document.getElementsByName('english')) == null || valButton(document.getElementsByName('gender')) == null || document.getElementById('ageIn').value.length &lt; 1){alert('Please make a selection.');}else{next();document.getElementById('time7').setAttribute('value', new Date().getTime().toString());}" type="button" value="Continue" /></u></u></div>
 </div>
 
 <div class="page" id="8" style="display: none;">
@@ -828,7 +835,8 @@
 <br />
 <input name="distraction" type="radio" value="yes" /> Yes <input name="distraction" type="radio" value="no" /> No<br />
 <br />
-<u><u><input onclick="if(valButton(document.getElementsByName('distraction')) == null || valButton(document.getElementsByName('careful')) == null){alert('Please make a selection.');}else{next();}" type="button" value="Continue" /></u></u></div>
+<div class="checkbox" hidden=""><label><input checked="checked" id="time8" name="time8" type="checkbox" value="1" /></label></div>
+<u><u><input onclick="if(valButton(document.getElementsByName('distraction')) == null || valButton(document.getElementsByName('careful')) == null){alert('Please make a selection.');}else{next();document.getElementById('time8').setAttribute('value', new Date().getTime().toString());}" type="button" value="Continue" /></u></u></div>
 </div>
 
 <div class="page" id="9" style="display: none;">
